added credit and tweaked intervall time

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Perpetual Pizza</title>
+    <link rel="manifest" href="/manifest.json" />
+    <title>The Never Ending Digital Pizza | Perpetual Pizza</title>
     <meta property="og:url" content="http://perpetual.pizza/"/>
     <meta property="og:title" content="The Never Ending Digital Pizza | Perpetual Pizza"/>
     <meta property="og:image" content="http://perpetual.pizza/images/img-fb.jpg"/>
