Updated styling to be more accessable.

--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,16 @@
 		<script async defer data-domain="perpetual.pizza" src="https://plausible.io/js/plausible.js"></script>
 	</head>
 	<body>
-		<video class="video" width="500" height="312" autoplay muted loop>
-			<source src="/assets/pizza.mp4" type="video/mp4" />
-			<source src="/assets/pizza.webp" type="video/webp" />
-		</video>
-		<div class="credit">
-			<a href="https://bloke.blog/" target="_blank" rel="noopener noreferrer">Bloke</a>
-			<a href="http://sheepfilms.co.uk/" target="_blank" rel="noopener noreferrer">SheepFilms</a>
-		</div>
-		<pizza-counter class="pizza-counter"></pizza-counter>
+		<main>
+			<video class="video" width="500" height="312" autoplay muted loop>
+				<source src="/assets/pizza.mp4" type="video/mp4" />
+				<source src="/assets/pizza.webp" type="video/webp" />
+			</video>
+			<div class="credit">
+				<a href="https://bloke.blog/" target="_blank" rel="noopener noreferrer">Bloke</a>
+				<a href="http://sheepfilms.co.uk/" target="_blank" rel="noopener noreferrer">SheepFilms</a>
+			</div>
+			<pizza-counter class="pizza-counter"></pizza-counter>
+		</main>
 	</body>
 </html>
