Fixed video not autoplaying on mobile devices.

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
 	</head>
 	<body>
 		<main>
-			<video class="video" width="500" height="312" autoplay muted loop>
-				<source src="/assets/pizza.mp4" type="video/mp4" />
+			<video class="video" width="500" height="312" autoplay muted loop playsinline>
 				<source src="/assets/pizza.webp" type="video/webp" />
+				<source src="/assets/pizza.mp4" type="video/mp4" />
 			</video>
 			<div class="credit">
 				<a href="https://bloke.blog/" target="_blank" rel="noopener noreferrer">Bloke</a>
