Added pizza count Plausible event.

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 		<meta name="twitter:image:src" content="/assets/img.jpg" />
 		<script src="/assets/app.ts"></script>
 		<script async defer data-domain="perpetual.pizza" src="https://plausible.io/js/plausible.js"></script>
+		<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 	</head>
 	<body>
 		<main>
