--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
 		<title>The Never Ending Digital Pizza | Perpetual Pizza</title>
 		<meta name="description" content="Watch the never ending digital pizza spin hypnotize you into ordering a take away." />
-		<link rel="stylesheet" href="/assets/app.css" />
-		<meta property="og:url" content="http://perpetual.pizza/" />
+		<meta property="og:url" content="https://perpetual.pizza/" />
 		<meta property="og:title" content="The Never Ending Digital Pizza | Perpetual Pizza" />
-		<meta property="og:image" content="/assets/img-fb.jpg" />
+		<meta property="og:image" content="/assets/cover.png" />
 		<meta property="og:site_name" content="Perpetual Pizza" />
 		<meta property="og:description" content="Watch the never ending digital pizza spin hypnotize you into ordering a take away." />
 		<meta name="twitter:card" content="summary_large_image" />
@@ -18,10 +15,12 @@
 		<meta name="twitter:creator" content="@wrux" />
 		<meta name="twitter:title" content="The Never Ending Digital Pizza | Perpetual Pizza" />
 		<meta name="twitter:description" content="Watch the never ending digital pizza spin hypnotize you into ordering a take away." />
-		<meta name="twitter:image:src" content="/assets/img.jpg" />
+		<meta name="twitter:image:src" content="/assets/cover.png" />
+		<link rel="stylesheet" href="/assets/app.css" />
 		<script src="/assets/app.ts"></script>
 		<script async defer data-domain="perpetual.pizza" src="https://plausible.io/js/plausible.js"></script>
 		<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+		<link rel="shortcut icon" href="/favicon.ico" />
 	</head>
 	<body>
 		<main>
