Added PWA install tracking.

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 		<meta name="twitter:title" content="The Never Ending Digital Pizza | Perpetual Pizza" />
 		<meta name="twitter:description" content="Watch the never ending digital pizza spin hypnotize you into ordering a take away." />
 		<meta name="twitter:image:src" content="/assets/cover.png" />
-		<link rel="stylesheet" href="/assets/app.css" />
-		<script src="/assets/app.ts"></script>
+		<link rel="stylesheet" href="/app.css" />
+		<script src="/app.ts"></script>
 		<script>
 			if ('serviceWorker' in navigator) {
 				const sw = '/service-worker.js';
