Updated Plausible analytics tracking domain.

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 				navigator.serviceWorker.register(sw);
 			}
 		</script>
-		<script async defer data-domain="perpetual.pizza" src="https://plausible.io/js/plausible.js"></script>
+		<script async defer data-domain="perpetual.pizza" src="https://stats.perpetual.pizza/js/index.js"></script>
 		<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 		<link rel="shortcut icon" href="/favicon.ico" />
 	</head>
