Added more subtle styling and emoji favicon.

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,8 @@
 		</script>
 		<script async defer data-domain="perpetual.pizza" src="https://stats.perpetual.pizza/js/index.js"></script>
 		<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
-		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍕</text></svg>" />
+" />
 	</head>
 	<body>
 		<main>
@@ -34,10 +35,12 @@
 				<source src="/assets/pizza.webp" type="video/webp" />
 				<source src="/assets/pizza.mp4" type="video/mp4" />
 			</video>
-			<div class="credit">
-				<a href="https://bloke.blog/" target="_blank" rel="noopener noreferrer">Bloke</a>
-				<a href="http://sheepfilms.co.uk/" target="_blank" rel="noopener noreferrer">SheepFilms</a>
-			</div>
+			<p class="credit">
+				Website by
+				<a href="https://bloke.blog/" target="_blank" rel="noopener noreferrer">Bloke<span class="sr-only"> (opens in new tab)</span></a>
+				and animation by
+				<a href="http://sheepfilms.co.uk/" target="_blank" rel="noopener noreferrer">SheepFilms<span class="sr-only"> (opens in new tab)</span></a>.
+			</p>
 			<pizza-counter class="pizza-counter"></pizza-counter>
 		</main>
 	</body>
